# ploidy

./: AGENTS.md  Cargo.toml  README.md  openapi-pretty.json
.github/: dependabot.yml
.github/workflows/: check.yml  notarize.yml  release.yml  tag.yml  test.yml
docs/plans/: 2026-04-25-inline-type-path-rework.mdown
ploidy/: Cargo.toml
ploidy-codegen-python/: Cargo.toml
ploidy-codegen-python/src/: enum_.rs  graph.rs  imports.rs  lib.rs  model.rs  naming.rs  ref_.rs  schema.rs  tagged.rs  tests.rs  types.rs  untagged.rs
ploidy-codegen-rust/: Cargo.toml  README.md
ploidy-codegen-rust/src/: cargo.rs  cfg.rs  client.rs  config.rs  derives.rs  enum_.rs  ext.rs  graph.rs  inlines.rs  lib.rs  naming.rs  operation.rs  primitive.rs  query.rs  ref_.rs  resource.rs  schema.rs  statics.rs  struct_.rs  tagged.rs  tests.rs  types.rs  untagged.rs
ploidy-codegen-typescript/: Cargo.toml
ploidy-codegen-typescript/src/: client.rs  emit.rs  enum_.rs  graph.rs  inlines.rs  lib.rs  naming.rs  operation.rs  primitive.rs  ref_.rs  schema.rs  struct_.rs  tagged.rs  tests.rs  types.rs  types_module.rs  untagged.rs
ploidy-core/: Cargo.toml  README.md
ploidy-core/src/: arena.rs  error.rs  lib.rs  macros.rs  tests.rs
ploidy-core/src/codegen/: mod.rs  unique.rs
ploidy-core/src/codegen/rust/: cargo.rs  client.rs  context.rs  enum_.rs  graph.rs  mod.rs  naming.rs  operation.rs  ref_.rs  resource.rs  schema.rs  statics.rs  struct_.rs  tagged.rs  types.rs  untagged.rs
ploidy-core/src/ir/: cooker.rs  fields.rs  graph.rs  mod.rs  spec.rs  transform.rs  types.rs
ploidy-core/src/ir/tests/: graph.rs  mod.rs  spec.rs  transform.rs  views.rs
ploidy-core/src/ir/types/: cooked.rs  graph.rs  mapper.rs  mod.rs  raw.rs  shape.rs  spec.rs
ploidy-core/src/ir/views/: any.rs  composition.rs  container.rs  enum_.rs  inline.rs  ir.rs  mod.rs  operation.rs  path.rs  primitive.rs  schema.rs  struct_.rs  tagged.rs  untagged.rs  wrappers.rs
ploidy-core/src/parse/: path.rs  types.rs
ploidy-pointer/: Cargo.toml  README.md
ploidy-pointer-derive/: Cargo.toml  README.md
ploidy-pointer-derive/src/: lib.rs
ploidy-pointer/src/: lib.rs
ploidy-pointer/tests/: pointee.rs  tag.rs  target.rs
ploidy-util/: Cargo.toml  README.md
ploidy-util/src/: absent.rs  binary.rs  date_time.rs  error.rs  lib.rs  query.rs  trace.rs  url.rs
ploidy/src/: args.rs  cmd.rs  config.rs  lib.rs  main.rs  stats.rs
ploidy/src/codegen/: mod.rs  unique.rs
ploidy/src/codegen/rust/: cargo.rs  client.rs  context.rs  mod.rs  ref_.rs  schema.rs
ploidy/src/ir/: error.rs  fields.rs  mod.rs  types.rs  visitor.rs
ploidy/src/parse/: mod.rs  types.rs
src/: main.rs
src/codegen/: unique.rs
src/codegen/rust/: derives.rs  naming.rs  operation.rs  resource.rs  statics.rs  struct_.rs  tagged.rs  types.rs  untagged.rs
src/ir/: spec.rs  transform.rs  visitor.rs
src/parse/: types.rs
