[workspace]
members = [
    "ploidy",
    "ploidy-codegen-python",
    "ploidy-codegen-rust",
    "ploidy-core",
    "ploidy-pointer",
    "ploidy-pointer-derive",
    "ploidy-util",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/linabutler/ploidy"
keywords = ["codegen", "openapi", "swagger"]
rust-version = "1.89"

[workspace.dependencies]
either = "1"
indoc = "2"
petgraph = "0.8"
quasiquodo-py = { git = "https://github.com/linabutler/quasiquodo", rev = "55e23bac85f7f7c09e9275f0181a3399b2a97063" }
ruff_python_codegen = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.15.4" }
ploidy-codegen-python = { path = "ploidy-codegen-python", version = "0.9.0" }
ploidy-codegen-rust = { path = "ploidy-codegen-rust", version = "0.9.0" }
ploidy-core = { path = "ploidy-core", version = "0.9.0" }
ploidy-pointer = { path = "ploidy-pointer", version = "0.9.0" }
ploidy-pointer-derive = { path = "ploidy-pointer-derive", version = "0.9.0" }
pretty_assertions = "1"
ref-cast = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
