[workspace]
members = [
    "ploidy",
    "ploidy-codegen-rust",
    "ploidy-core",
    "ploidy-pointer",
    "ploidy-pointer-derive",
    "ploidy-util",
]
resolver = "2"

[workspace.package]
version = "0.12.2"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/linabutler/ploidy"
keywords = ["openapi", "codegen", "compiler"]
rust-version = "1.89"

[workspace.dependencies]
either = "1"
indoc = "2"
ploidy-codegen-rust = { path = "ploidy-codegen-rust", version = "0.12.2" }
ploidy-core = { path = "ploidy-core", version = "0.12.2" }
ploidy-pointer = { path = "ploidy-pointer", version = "0.12.2" }
ploidy-pointer-derive = { path = "ploidy-pointer-derive", version = "0.12.2" }
pretty_assertions = "1"
ref-cast = "1"
rustc-hash = "2"
toml_edit = { version = "0.25", features = ["serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
