[workspace]
members = [
    "ploidy",
    "ploidy-codegen-rust",
    "ploidy-core",
    "ploidy-pointer",
    "ploidy-pointer-derive",
    "ploidy-util",
]
resolver = "3"

[workspace.package]
version = "0.15.0"
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/linabutler/ploidy"
keywords = ["openapi", "codegen", "compiler"]
rust-version = "1.89"

[workspace.dependencies]
either = "1"
indoc = "2"
opentelemetry = { version = "0.32", default-features = false, features = [
    "trace",
] }
opentelemetry-http = { version = "0.32", default-features = false }
ploidy-codegen-rust = { path = "ploidy-codegen-rust", version = "0.15.0" }
ploidy-core = { path = "ploidy-core", version = "0.15.0" }
ploidy-pointer = { path = "ploidy-pointer", version = "0.15.0" }
ploidy-pointer-derive = { path = "ploidy-pointer-derive", version = "0.15.0" }
pretty_assertions = "1"
ref-cast = "1"
rustc-hash = "2"
serde = "1"
serde_json = "1"
toml_edit = { version = "0.25", features = ["serde"] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.33", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"
