[package]
name = "ploidy-codegen-rust"
description = "Rust codegen for the Ploidy OpenAPI compiler"
readme = "README.md"
keywords = ["openapi", "rust", "codegen", "compiler"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
heck = "0.5"
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
miette = "7"
ploidy-core = { workspace = true, features = ["proc-macro2"] }
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
ref-cast = { workspace = true }
semver = "1"
syn = { version = "2", default-features = false, features = [
    "parsing",
    "printing",
] }
textwrap = { version = "0.16", default-features = false, features = [
    "unicode-linebreak",
    "unicode-width",
] }
thiserror = "2"
toml_edit = { workspace = true }
unicode-ident = "1"

[dev-dependencies]
indoc = { workspace = true }
syn = { version = "2", default-features = false, features = [
    "extra-traits",
    "parsing",
    "printing",
] }
pretty_assertions = { workspace = true }

[lints]
workspace = true
