[package]
name = "ploidy-codegen-typescript"
description = "A Ploidy generator that emits TypeScript type declarations"
readme = "README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
heck = "0.5"
itertools = "0.14"
miette = "7"
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_codegen = { workspace = true }
oxc_span = { workspace = true }
ploidy-core = { workspace = true }
ref-cast = { workspace = true }
thiserror = "2"
unicode-ident = "1"

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true
