[package]
name = "ploidy-core"
description = "OpenAPI type definitions and code generators for Ploidy"
readme = "README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
atomic_refcell = "0.1"
by_address = "1"
cargo_toml = { version = "0.22", optional = true }
heck = "0.5"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
miette = "7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_path_to_error = "0.1"
serde_yaml = "0.9.34"
percent-encoding = "2.3"
petgraph = "0.8"
ploidy-pointer = { workspace = true, features = ["full"] }
prettyplease = { version = "0.2", optional = true }
proc-macro2 = { version = "1", default-features = false, optional = true }
quote = { version = "1", default-features = false, optional = true }
ref-cast = "1"
rustc-hash = "2"
syn = { version = "2", default-features = false, features = [
    "parsing",
    "printing",
], optional = true }
textwrap = { version = "0.16", default-features = false, features = [
    "unicode-linebreak",
    "unicode-width",
], optional = true }
thiserror = "2"
toml = { version = "0.9", default-features = false, features = [
    "display",
    "parse",
    "serde",
], optional = true }
unicase = "2"
unicode-ident = { version = "1", optional = true }
winnow = "0.7"

[dev-dependencies]
indoc = "2"

[features]
default = []
rust = [
    "cargo_toml",
    "prettyplease",
    "proc-macro2",
    "quote",
    "syn",
    "textwrap",
    "toml",
    "unicode-ident",
]

[lints]
workspace = true
