[package]
name = "ploidy-core"
description = "IR and type graph for the Ploidy OpenAPI compiler"
readme = "README.md"
keywords = ["openapi", "codegen", "compiler", "ir", "schema"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
atomic_refcell = "0.1"
bumpalo = { version = "3", features = ["collections"] }
either = { workspace = true }
fixedbitset = "0.5"
form_urlencoded = "1"
indexmap = { version = "2", features = ["serde"] }
itertools = "0.14"
miette = "7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde-saphyr = "0.0.24"
percent-encoding = "2.3"
petgraph = "0.8"
ploidy-pointer = { workspace = true, features = ["full"] }
prettyplease = { version = "0.2", optional = true }
proc-macro2 = { version = "1", default-features = false, optional = true }
quote = { version = "1", default-features = false, optional = true }
ref-cast = { workspace = true }
rustc-hash = { workspace = true }
syn = { version = "2", default-features = false, optional = true }
thiserror = "2"
unicase = "2"
winnow = "1.0"

[dev-dependencies]
indoc = "2"
pretty_assertions = { workspace = true }

[features]
default = []
proc-macro2 = [
    "dep:prettyplease",
    "dep:proc-macro2",
    "dep:quote",
    "syn/parsing",
]

[lints]
workspace = true
