[package]
name = "ploidy-pointer-derive"
description = "Derive macros for Ploidy JSON Pointers"
readme = "README.md"
keywords = ["6901", "json", "json-pointer", "rfc-6901"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
itertools = "0.14"
proc-macro2 = "1"
quote = "1"
syn = "2"
thiserror = "2"

[dev-dependencies]
ploidy-pointer = { workspace = true, features = [] }

[features]
default = []
did-you-mean = ["ploidy-pointer/did-you-mean"]
