[package]
name = "ploidy-pointer"
description = "JSON Pointers for strongly-typed data structures"
readme = "README.md"
keywords = ["6901", "json", "json-pointer", "rfc-6901"]
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
indexmap = { version = "2", optional = true }
itertools = "0.14"
ploidy-pointer-derive = { workspace = true, optional = true }
serde_json = { version = "1", optional = true }
strsim = { version = "0.11", optional = true }
thiserror = "2"

[dependencies.chrono]
version = "0.4"
default-features = false
features = []
optional = true

[dependencies.url]
version = "2.5"
default-features = false
features = []
optional = true

[features]
default = ["derive"]
full = ["chrono", "derive", "did-you-mean", "indexmap", "serde_json", "url"]
chrono = ["dep:chrono"]
derive = ["dep:ploidy-pointer-derive"]
did-you-mean = ["dep:strsim", "ploidy-pointer-derive/did-you-mean"]
indexmap = ["dep:indexmap"]
serde_json = ["dep:serde_json"]
url = ["dep:url"]
