[package]
name = "ploidy"
description = "An OpenAPI code generator that supports polymorphic schemas"
readme = "README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
cargo_toml = "0.22"
clap = { version = "4", features = ["cargo", "derive"] }
miette = { version = "7", features = ["fancy"] }
mimalloc = { version = "0.1", optional = true }
ploidy-core = { workspace = true, features = ["rust"] }
semver = "1"

[features]
mimalloc = ["dep:mimalloc"]
