[package]
name = "ploidy"
description = "A code generator for polymorphic OpenAPI specs"
readme = "README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
cargo_toml = "0.22"
clap = { version = "4", features = ["cargo", "derive"] }
miette = { version = "7", features = ["fancy"] }
mimalloc = { version = "0.1", optional = true }
ploidy-codegen-rust = { workspace = true }
ploidy-core = { workspace = true }
semver = "1"

[features]
mimalloc = ["dep:mimalloc"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.zip"
pkg-fmt = "zip"
