[package]
name = "ploidy"
description = "A code generator for polymorphic OpenAPI specs"
readme = "README.md"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
cargo_toml = "0.22"
clap = { version = "4", features = ["cargo", "derive"] }
itertools = "0.14"
miette = { version = "7", features = ["fancy"] }
mimalloc = { version = "0.1", optional = true }
ploidy-codegen-rust = { workspace = true }
ploidy-codegen-typescript = { workspace = true }
ploidy-core = { workspace = true }
semver = "1"

[features]
mimalloc = ["dep:mimalloc"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-fmt = "tgz"
